--- a/mandelbulber2/formula/ui/jos_kleinian.ui
+++ b/mandelbulber2/formula/ui/jos_kleinian.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>jos_kleinian</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -43,16 +43,6 @@
     <widget class="QLabel" name="label_252">
      <property name="text">
       <string>Note 2): Each additional iteration adds more detail.</string>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QLabel" name="label_253">
-     <property name="text">
-      <string>Note 3): This type of DE calculation will not work with other DE types.</string>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
