--- a/mandelbulber2/qt/image_save_dialog.ui
+++ b/mandelbulber2/qt/image_save_dialog.ui
@@ -318,6 +318,20 @@ and will only be present after enabling and re-render.</string>
               <property name="spacing">
                <number>2</number>
               </property>
+              <item row="1" column="0" colspan="2">
+               <widget class="MyCheckBox" name="checkBox_append_alpha_png">
+                <property name="text">
+                 <string>Append alpha to image (only PNG and TIFF)</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0" colspan="2">
+               <widget class="MyCheckBox" name="checkBox_linear_colorspace">
+                <property name="text">
+                 <string>Use linear colorspace (only EXR)</string>
+                </property>
+               </widget>
+              </item>
               <item row="0" column="0">
                <widget class="QLabel" name="label_5">
                 <property name="text">
@@ -326,25 +340,6 @@ and will only be present after enabling and re-render.</string>
                </widget>
               </item>
               <item row="0" column="1">
-               <widget class="QSlider" name="sliderInt_jpeg_quality">
-                <property name="minimum">
-                 <number>1</number>
-                </property>
-                <property name="maximum">
-                 <number>100</number>
-                </property>
-                <property name="singleStep">
-                 <number>8</number>
-                </property>
-                <property name="pageStep">
-                 <number>64</number>
-                </property>
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="2">
                <widget class="MySpinBox" name="spinboxInt_jpeg_quality">
                 <property name="minimum">
                  <number>1</number>
@@ -354,17 +349,18 @@ and will only be present after enabling and re-render.</string>
                 </property>
                </widget>
               </item>
-              <item row="1" column="0" colspan="3">
-               <widget class="MyCheckBox" name="checkBox_append_alpha_png">
+              <item row="4" column="0" colspan="2">
+               <widget class="MyCheckBox" name="checkBox_stereoscopic_in_separate_files">
                 <property name="text">
-                 <string>Append alpha to image (only PNG and TIFF)</string>
+                 <string>Save stereoscopic left and right images in separate files
+(stereoscopic mode has to be &quot;left-right&quot;)</string>
                 </property>
                </widget>
               </item>
-              <item row="2" column="0" colspan="3">
-               <widget class="MyCheckBox" name="checkBox_linear_colorspace">
+              <item row="2" column="0" colspan="2">
+               <widget class="MyCheckBox" name="checkBox_save_channels_in_separate_folders">
                 <property name="text">
-                 <string>Use linear colorspace (only EXR)</string>
+                 <string>Save each channel in separate folder</string>
                 </property>
                </widget>
               </item>
@@ -401,6 +397,11 @@ and will only be present after enabling and re-render.</string>
    <header>my_spin_box.h</header>
   </customwidget>
   <customwidget>
+   <class>MyCheckBox</class>
+   <extends>QCheckBox</extends>
+   <header>my_check_box.h</header>
+  </customwidget>
+  <customwidget>
    <class>MyLineEdit</class>
    <extends>QLineEdit</extends>
    <header>my_line_edit.h</header>
@@ -409,11 +410,6 @@ and will only be present after enabling and re-render.</string>
    <class>MyComboBox</class>
    <extends>QComboBox</extends>
    <header>my_combo_box.h</header>
-  </customwidget>
-  <customwidget>
-   <class>MyCheckBox</class>
-   <extends>QCheckBox</extends>
-   <header>my_check_box.h</header>
   </customwidget>
  </customwidgets>
  <resources>
