--- a/mandelbulber2/formula/ui/bristorbrot2.ui
+++ b/mandelbulber2/formula/ui/bristorbrot2.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>bristorbrot2</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>769</width>
+    <width>799</width>
     <height>1040</height>
    </rect>
   </property>
@@ -29,13 +29,6 @@
    <property name="bottomMargin">
     <number>2</number>
    </property>
-   <item>
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>No parameters</string>
-     </property>
-    </widget>
-   </item>
    <item>
     <widget class="MyCheckBox" name="checkBox_transf_function_enabled">
      <property name="text">
